--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 
 # Session Data files
 .RData
-# Any data 
+# Any data
 dat/
 
 # Example code in package build process
@@ -20,8 +20,8 @@ dat/
 .Rproj.user/
 
 # produced vignettes
-vignettes/*.html
-vignettes/*.pdf
+# vignettes/*.html
+# vignettes/*.pdf
 
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
