--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,4 @@ export(createMvdCohorts)
 export(generateMvdData)
 export(listingIngredients)
 export(listingMeasurements)
+export(unadjIndeptRidgeReg)
