--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
-Package: MvDeconfounder
-Title: What the Package Does (One Line, Title Case)
+Package: Deconfounder
+Title: Deconfounder 
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Linying",
+           family = "Zhang",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
+           email = "linying.zhang@columbia.edu",
            comment = structure("YOUR-ORCID-ID", .Names = "ORCID"))
-Description: What the package does (one paragraph).
-License: What license it uses
-Encoding: UTF-8
-LazyData: true
+Description: MvDeconfounder is a causal inference model for estimating the treatment effects of medications with eletronic health records. We aim to assess the treatment effects of multiple medications on measurements using the MvDeconfounder. MvDeconfounder identifies the causal medications that have either direct effect or adverse effect on each clinical measurement. The inputs to MvDeconfounder are medication records and pre-treatment and post-treatment measurement values. The MvDeconfounder fits a probabilistic factor model (e.g., poisson factoriztion or deep exponential family) to the medication records to construct substitute confounders and adjusts for substitute confounders in the outcome model for assessing the causal effects of medications..
+License: Apache License 2.0
 RoxygenNote: 7.0.0
